--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,14 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Flower Shop</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Unbounded:wght@700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.css">	
+	<link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
 	<div class="mainBg">
 		<header id="header">
 			<div class="container">
 				<div class="header ficb">
-					<a href="/"><img src="img/logo.svg" alt="logo" class="logo"></a>
+					<a href="/"><img src="{% static 'img/logo.svg' %}" alt="logo" class="logo"></a>
 					<nav>
 						<ul class="menu ficc">
 							<li class="menu__item"><a href="#" class="menu__item_link">Каталог</a></li>
@@ -115,7 +116,7 @@
 						<li class="menu__item"><a href="#" class="menu__item_link">Контакты</a></li>
 					</ul>
 				</nav>
-				<hr class="line"></hr>
+				<hr class="line"> </hr>
 				<a href="#" class="footer__poli">Политика конфиденциальности</a>
 				<p class="footer_cop">©️2022. FlowerShop. Все права защищены</p>
 			</div>
