--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 						</div>
 					</div>
 				</div>
-				<button class="btn recommended__btn">Показать всю коллекцию</button>
+				<button class="btn recommended__btn" onclick="location.href='{% url 'catalog' %}'">Показать всю коллекцию</button>
 			</div>
 		</div>
 	</section>
@@ -68,7 +68,7 @@
 						<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
 					</div>
 				</div>
-				<button class="btn contacts__btn">Заказать доставку</button>
+				<button class="btn contacts__btn" onclick="location.href='{% url 'order' %}'">Заказать доставку</button>
 			</div>
 		</div>
 	</section>
