--- a/templates/order.html
+++ b/templates/order.html
@@ -1,19 +1,8 @@
+{% extends 'base.html' %}
+{% load static %}
 
-<body>
-	<header id="header">
-		<div class="container">
-			<div class="header ficb">
-				<a href="/"><img src="img/logo.svg" alt="logo" class="logo"></a>
-				<nav>
-					<ul class="menu ficc">
-						<li class="menu__item"><a href="#" class="menu__item_link">Каталог</a></li>
-						<li class="menu__item"><a href="#" class="menu__item_link">Рекомендации</a></li>
-						<li class="menu__item"><a href="#" class="menu__item_link">Контакты</a></li>
-					</ul>
-				</nav>
-			</div>
-		</div>
-	</header>
+{% block title %}Заказ - Flower Shop{% endblock %}
+{% block content %}
 	<section id="order">
 		<div class="container">
 			<div class="order">
@@ -55,8 +44,8 @@
 							</div>
 							<div class="order__form_line"></div>
 							<div class="order__form_btns ficb">
-								<button class="btn order__form_pay">Оплатить</button>
-								<button class="btn order__form_btn">Назад</button>
+								<button class="btn order__form_pay" onclick="location.href='{% url 'order_step' %}'">Оплатить</button>
+								<button class="btn order__form_btn" onclick="location.href='{% url 'index' %}'">Назад</button>
 							</div>
 						</form>
 					</div>
@@ -64,25 +53,8 @@
 				</div>
 			</div>
 		</div>
-		<img src="img/orderImg.jpg" alt="orderImg" class="order__img">
+		<img src="{% static 'img/orderImg.jpg' %}" alt="orderImg" class="order__img">
 	</section>
-	<footer id="footer">
-		<div class="container">
-			<div class="footer">
-				<a href="/"><img src="img/logo.svg" alt="logo" class="logo footer__logo"></a>
-				<nav>
-					<ul class="menu footer__menu ficc">
-						<li class="menu__item"><a href="#" class="menu__item_link">Каталог</a></li>
-						<li class="menu__item"><a href="#" class="menu__item_link">Рекомендации</a></li>
-						<li class="menu__item"><a href="#" class="menu__item_link">Контакты</a></li>
-					</ul>
-				</nav>
-				<hr class="line"></hr>
-				<a href="#" class="footer__poli">Политика конфиденциальности</a>
-				<p class="footer_cop">©️2022. FlowerShop. Все права защищены</p>
-			</div>
-		</div>
-	</footer>
 	<script>
 		document.querySelector('input[type=radio]').onclick = function(e) {
 			// e.preventDefault()
@@ -90,5 +62,4 @@
 			console.log(e.target.value)
 		}
 	</script>
-</body>
-</html>
+{% endblock %}
