--- a/templates/result.html
+++ b/templates/result.html
@@ -1,27 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Flower Shop</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Unbounded:wght@700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.css">	
-</head>
-<body>
-	<header id="header">
-		<div class="container">
-			<div class="header ficb">
-				<a href="/"><img src="img/logo.svg" alt="logo" class="logo"></a>
-				<nav>
-					<ul class="menu ficc">
-						<li class="menu__item"><a href="#" class="menu__item_link">Каталог</a></li>
-						<li class="menu__item"><a href="#" class="menu__item_link">Рекомендации</a></li>
-						<li class="menu__item"><a href="#" class="menu__item_link">Контакты</a></li>
-					</ul>
-				</nav>
-			</div>
-		</div>
-	</header>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Главная страница - Flower Shop{% endblock %}
+{% block content %}
 	<section id="result">
 		<div class="container">
 			<div class="result p100">
@@ -49,16 +30,16 @@
 							</div>
 						</div>
 					</div>
-					<img src="img/cardImg.jpg" alt="result Img" class="result__block_img">
+					<img src="{% static 'img/cardImg.jpg' %}" alt="result Img" class="result__block_img">
 					<div class="result__items">
 						<div class="title result__items_title">Летнее утро</div>
 						<div class="result__items_price">3 600 руб</div>
-						<button class="btn result__items_btn">Заказать букет</button>
+						<button class="btn result__items_btn" onclick="location.href='{% url 'order' %}'">Заказать букет</button>
 						<hr class="result__items_line" />
 						<div class="result__items_intro">Хотите что-то более специальное?</div>
 						<div class="result__items_block">
-							<button class="btn largeBtn result__items_block__btn">Смотреть всю коллекцию</button>
-							<button class="btn largeBtn result__items_block__btn">Заказать консультацию</button>
+							<button class="btn largeBtn result__items_block__btn" onclick="location.href='{% url 'catalog' %}'">Смотреть всю коллекцию</button>
+							<button class="btn largeBtn result__items_block__btn" onclick="location.href='{% url 'consultation' %}'">Заказать консультацию</button>
 						</div>
 					</div>
 				</div>	
@@ -89,7 +70,7 @@
 						<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
 					</div>					
 				</div>
-				<button class="btn contacts__btn">Заказать доставку</button>
+				<button class="btn contacts__btn" onclick="location.href='{% url 'order' %}'">Заказать доставку</button>
 			</div>
 		</div>
 	</section>
@@ -105,22 +86,4 @@
 			</div>
 		</div>
 	</section>
-	<footer id="footer">
-		<div class="container">
-			<div class="footer">
-				<a href="/"><img src="img/logo.svg" alt="logo" class="logo footer__logo"></a>
-				<nav>
-					<ul class="menu footer__menu ficc">
-						<li class="menu__item"><a href="#" class="menu__item_link">Каталог</a></li>
-						<li class="menu__item"><a href="#" class="menu__item_link">Рекомендации</a></li>
-						<li class="menu__item"><a href="#" class="menu__item_link">Контакты</a></li>
-					</ul>
-				</nav>
-				<hr class="line"></hr>
-				<a href="#" class="footer__poli">Политика конфиденциальности</a>
-				<p class="footer_cop">©️2022. FlowerShop. Все права защищены</p>
-			</div>
-		</div>
-	</footer>
-</body>
-</html>
+{% endblock %}
