--- a/templates/quiz-step.html
+++ b/templates/quiz-step.html
@@ -3,38 +3,37 @@
 
 {% block title %}Выбор букета - Flower Shop{% endblock %}
 {% block content %}
-	<section id="quiz">
-		<div class="container">
-			<div class="quiz">
-				<div class="quiz__back ">
-					<a href="{% url 'quiz' %}" class="quiz__back_link fic"><img src="{% static 'img/arrow-left.svg' %}" alt="arrow-left" class="arrowLeft">
-					<span class="quiz__back_intro">Назад</span></a>
-				</div>
-				<div class="quiz__block">
-					<h1 class="quiz__title">На какой бюджет рассчитываете?</h1>
-						<form method="post">
-							{% csrf_token %}
-							<div class="quiz__elems fic">
-								<button type="submit" name="budget" value="до 1000 руб" class="quiz__elem">До 1 000 руб</button>
-								<button type="submit" name="budget" value="1000 - 5000 руб" class="quiz__elem">1 000 - 5 000 руб</button>
-								<button type="submit" name="budget" value="от 5000 руб" class="quiz__elem">от 5 000 руб</button>
-								<button type="submit" name="budget" value="не имеет значения" class="quiz__elem">Не имеет значения</button>
-							</div>
-						</form>
-						<div class="quiz__progress">
-							<div class="quiz__progress_step">
-								<span class="quiz__progress_num">2</span>
-								<span class="quiz__progress_in"> шаг из </span>
-								<span class="quiz__progress_num">2</span>
-							</div>
-							<div class="quiz__progress_line">
-								<div class="quiz__progress_lineActive"></div>
-							</div>
-						</div>
-
-				</div>
-				
-			</div>
-		</div>
-	</section>
+<section id="quiz">
+    <div class="container">
+        <div class="quiz">
+            <div class="quiz__back ">
+                <a href="{% url 'quiz' %}" class="quiz__back_link fic">
+                    <img src="{% static 'img/arrow-left.svg' %}" alt="arrow-left" class="arrowLeft">
+                    <span class="quiz__back_intro">Назад</span>
+                </a>
+            </div>
+            <div class="quiz__block">
+                <h1 class="quiz__title">На какой бюджет рассчитываете?</h1>
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="quiz__elems fic">
+                        {% for budget in budgets %}
+                            <button type="submit" name="budget" value="{{ budget.amount }}" class="quiz__elem">{{ budget.amount }}</button>
+                        {% endfor %}
+                    </div>
+                </form>
+                <div class="quiz__progress">
+                    <div class="quiz__progress_step">
+                        <span class="quiz__progress_num">2</span>
+                        <span class="quiz__progress_in"> шаг из </span>
+                        <span class="quiz__progress_num">2</span>
+                    </div>
+                    <div class="quiz__progress_line">
+                        <div class="quiz__progress_lineActive"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
