--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -17,9 +17,9 @@
                 <form method="post">
                     {% csrf_token %}
                     <div class="quiz__elems fic">
-                        <button type="submit" name="event" value="wedding" class="quiz__elem">Свадьба</button>
-                        <button type="submit" name="event" value="birthday" class="quiz__elem">День рождения</button>
-                        <button type="submit" name="event" value="no_reason" class="quiz__elem">Без повода</button>
+                        {% for event in events %}
+                            <button type="submit" name="event" value="{{ event.title }}" class="quiz__elem">{{ event.title }}</button>
+                        {% endfor %}
                     </div>
                     <div class="quiz__progress">
                         <div class="quiz__progress_step">
