--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,11 +17,14 @@
 img {
 	max-width: 100%;
 }
-a, button {
+
+a,
+button {
 	cursor: pointer;
 	transition: all .2s ease;
 
 }
+
 input::placeholder {
 	color: rgba(0, 0, 0, .3);
 }
@@ -32,8 +35,9 @@ input::placeholder {
 	width: 100%;
 	margin: 0 auto;
 }
+
 .title {
-	font-family: 'Unbounded' , sans-serif;
+	font-family: 'Unbounded', sans-serif;
 	font-style: normal;
 	font-weight: 700;
 	font-size: 36px;
@@ -41,6 +45,7 @@ input::placeholder {
 	color: #17CF97;
 	margin-bottom: 30px;
 }
+
 .btn {
 	background: #17CF97;
 	border-radius: 40px;
@@ -51,9 +56,11 @@ input::placeholder {
 	border: none;
 	cursor: pointer;
 }
+
 .btn:hover {
 	background: #14A87B;
 }
+
 .largeBtn {
 	width: 100%;
 	height: 57px;
@@ -61,24 +68,29 @@ input::placeholder {
 	color: #17CF97;
 	margin-top: 30px;
 }
+
 .largeBtn:hover {
 	background: #17CF97;
 	color: #FFFFFF;
 }
+
 .fic {
 	display: flex;
 	align-items: center;
 }
+
 .ficb {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 }
+
 .ficc {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
+
 .p100 {
 	padding: 100px 0;
 }
@@ -88,34 +100,41 @@ input::placeholder {
 	background-size: cover;
 	position: relative;
 }
+
 #header {
 	padding-top: 11px;
 }
+
 .header {
 	border-bottom: 1px solid #17CF97;
 }
+
 .header .logo {
 	padding-bottom: 11px;
 }
+
 .menu__item {
 	margin-right: 40px;
 	list-style: none;
 }
+
 .menu__item:last-child {
 	margin-right: 0;
 }
+
 .menu__item_link {
 	font-weight: 600;
-font-size: 10px;
-line-height: 145.02%;
-/* identical to box height, or 15px */
+	font-size: 10px;
+	line-height: 145.02%;
+	/* identical to box height, or 15px */
 
-text-transform: uppercase;
+	text-transform: uppercase;
 
-/* основной */
-text-decoration: none;
-color: #17CF97;
+	/* основной */
+	text-decoration: none;
+	color: #17CF97;
 }
+
 .banner {
 	padding-top: 174px;
 	padding-bottom: 183px;
@@ -135,54 +154,84 @@ color: #17CF97;
 	color: #17CF97;
 	margin-bottom: 50px;
 }
+
 .banner__text {
 	max-width: 423px;
 	font-size: 16px;
-line-height: 103.52%;
-/* or 17px */
+	line-height: 103.52%;
+	/* or 17px */
 
 
-/* серый */
+	/* серый */
 
-color: #ABABAB;
-margin-bottom: 50px;
+	color: #ABABAB;
+	margin-bottom: 50px;
 }
+
 .banner__img {
-/*	width: 794px;
+	/*	width: 794px;
 height: 825px;*/
-left: 47%;
-/*top: -38px;*/
-bottom: 0;
+	left: 47%;
+	/*top: -38px;*/
+	bottom: 0;
 	position: absolute;
 
 }
+
 .banner__btn {
 	width: 188px;
 	height: 57px;
 }
+
+.bouquet {
+	border: 1px solid black;
+}
+
 .recommended__block {
 	display: flex;
-    align-items: end;
+	align-items: end;
 	width: 398px;
 	height: 400px;
-	margin-right: 9px;
 }
+
 .recommended__block:last-child {
 	margin-right: 0;
 }
+
 .recommended__block_first {
 	background: url('../img/recommendedBg1.jpg') no-repeat center bottom / cover;
 }
+
 .recommended__block_sec {
 	background: url('../img/recommendedBg2.jpg') no-repeat center bottom / cover;
 }
+
 .recommended__block_thr {
 	background: url('../img/recommendedBg3.jpg') no-repeat center bottom / cover;
 }
-.recommended__block_elems {
+
+.recommended-img {
+
 	width: 100%;
-	padding: 15px;
+	height: 100%;
+	object-fit: cover;
+	z-index: -1
 }
+
+.recommended-bg {
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.recommended__block_elems {
+	flex: 1 1 calc(33.3% - 20px);
+	/* width: 100%; */
+	height: 400px;
+	padding: 15px;
+	box-sizing: border-box;
+}
+
 .recommended__btn {
 	width: 100%;
 	height: 57px;
@@ -192,18 +241,22 @@ bottom: 0;
 .contacts {
 	padding-bottom: 100px;
 }
+
 .contacts__block {
 	width: 398px;
 }
+
 .contacts__map {
 	width: 398px;
 	height: 316px;
 }
+
 .contacts__btn {
 	width: 100%;
 	height: 57px;
 	margin-top: 30px;
 }
+
 .contacts__block_item {
 	width: 100%;
 	height: 100px;
@@ -211,29 +264,30 @@ bottom: 0;
 	margin-bottom: 8px;
 	flex-direction: column;
 }
+
 .contacts__block_item:last-child {
 	margin-bottom: 0;
 }
+
 .contacts__block_intro {
 	margin-bottom: 10px;
 	font-size: 14px;
-line-height: 145.02%;
-/* or 20px */
-
-
-/* серый */
-
-color: #ABABAB;
+	line-height: 145.02%;
+	color: #ABABAB;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
+
 .contacts__block_tel {
 	font-size: 16px;
-line-height: 103.52%;
-/* identical to box height, or 17px */
+	line-height: 103.52%;
+	/* identical to box height, or 17px */
 
-text-decoration: none;
-/* черный */
+	text-decoration: none;
+	/* черный */
 
-color: #2D2D2D;
+	color: #2D2D2D;
 }
 
 #consultation {
@@ -241,17 +295,20 @@ color: #2D2D2D;
 	padding-bottom: 49px;
 	background: #17CF97;
 }
+
 .consultation__title {
 	line-height: 103.52%;
-/* or 37px */
-margin-bottom: 19px;
+	/* or 37px */
+	margin-bottom: 19px;
 	text-align: center;
-color: #FFFFFF;
+	color: #FFFFFF;
 }
+
 .consultation__form {
 	width: 655px;
 	margin: 0 auto;
 }
+
 .consultation__form_input {
 	padding-left: 30px;
 	padding-right: 7px;
@@ -267,6 +324,7 @@ color: #FFFFFF;
 	color: rgba(0, 0, 0, .3);
 	margin-right: 10px;
 }
+
 .consultation__form_btn {
 	font-weight: 500;
 	font-size: 16px;
@@ -286,41 +344,45 @@ color: #FFFFFF;
 #footer {
 	background: #F5F5F5;
 }
+
 .footer {
 	padding-top: 46px;
 	padding-bottom: 20px;
 	text-align: center;
 }
+
 .footer__logo {
 	margin-bottom: 40px;
 }
+
 .line {
 	margin: 15px 0;
 	height: 2px;
 	border: none;
 	background: #17CF97;
-/*	border: 1px solid #17CF97;*/
+	/*	border: 1px solid #17CF97;*/
 }
+
 .footer__poli {
 	font-size: 12px;
-line-height: 145.02%;
-/* or 17px */
+	line-height: 145.02%;
+	/* or 17px */
 
-text-decoration-line: underline;
+	text-decoration-line: underline;
 
-color: #000000;
-opacity: 0.3;
+	color: #000000;
+	opacity: 0.3;
 }
 
 .footer_cop {
 	font-size: 12px;
-line-height: 145.02%;
-/* or 17px */
+	line-height: 145.02%;
+	/* or 17px */
 
-margin-top: 10px;
-color: #000000;
+	margin-top: 10px;
+	color: #000000;
 
-opacity: 0.3;
+	opacity: 0.3;
 }
 
 
@@ -328,74 +390,102 @@ opacity: 0.3;
 /*.catalog__block .recommended__elems {
 	flex-wrap: wrap;
 } */
+.catalog__block {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	gap: 5px;
+}
+
 .catalog__block .recommended__elems {
 	margin-bottom: 10px;
 }
+
 .recommended__elems_first .recommended__block_sec {
 	background: url('../img/catalog/catalogBg1.jpg') no-repeat center bottom / cover;
 }
+
 .recommended__elems_first .recommended__block_thr {
 	background: url('../img/catalog/catalogBg2.jpg') no-repeat center bottom / cover;
 }
+
 .recommended__elems_sec .recommended__block_first {
 	background: url('../img/catalog/catalogBg3.jpg') no-repeat center bottom / cover;
 }
+
 .recommended__elems_sec .recommended__block_sec {
 	background: url('../img/catalog/catalogBg4.jpg') no-repeat center bottom / cover;
 }
 
+.recommended_intro {
+	margin-top: auto;
+}
+
+.recommended_price {
+	margin-top: auto;
+}
 
 /*card.html*/
 .card {
 	padding-top: 50px;
-	padding-bottom: 100px;	
+	padding-bottom: 100px;
 }
+
 .card__block_first {
 	width: 602px;
 }
+
 .card__block_sec {
 	width: 499px;
 }
+
 .card__img {
 	width: 100%;
 	height: 600px;
 }
+
 .card__block_price {
 	font-weight: 300;
-font-size: 36px;
-line-height: 103.52%;
-/* or 37px */
+	font-size: 36px;
+	line-height: 103.52%;
+	/* or 37px */
 
 
-/* черный */
+	/* черный */
 
-color: #2D2D2D;
-margin-bottom: 30px;
+	color: #2D2D2D;
+	margin-bottom: 30px;
 }
+
 .card__elems {
 	display: flex;
 	margin-bottom: 30px;
 }
+
 .card__elems:last-child {
 	margin-bottom: 0;
 }
+
 .card__elems_intro {
 	font-size: 14px;
 	line-height: 145.02%;
 	color: #000000;
 	margin-right: 52px;
 }
+
 .card_items_intro {
 	display: block;
 	font-size: 14px;
 	line-height: 145.02%;
 	color: #ABABAB;
 }
+
 .card__btn {
 	background: #17CF97;
 	color: #FFFFFF;
 	margin-top: 50px;
 }
+
 .card__btn:hover {
 	background: #14A87B;
 }
@@ -405,18 +495,22 @@ margin-bottom: 30px;
 .arrowLeft {
 	margin-right: 4px;
 }
+
 .quiz__back_link {
 	text-decoration: none;
 }
+
 .quiz__back_intro {
 	font-size: 14px;
 	line-height: 145.02%;
 
 	color: #ABABAB;
 }
+
 .quiz__back {
 	padding-top: 210px;
 }
+
 .quiz__title {
 	margin-top: 20px;
 	margin-bottom: 38px;
@@ -427,6 +521,7 @@ margin-bottom: 30px;
 	line-height: 103.52%;
 	color: #2D2D2D;
 }
+
 .quiz__elem {
 	font-weight: 500;
 	font-size: 16px;
@@ -441,19 +536,23 @@ margin-bottom: 30px;
 	border: 1px solid #17CF97;
 	border-radius: 100px;
 }
+
 .quiz__elem:last-child {
 	margin-right: 0;
 }
-.quiz__elem:hover {
- 	background: #D9FAF1;
 
- }
+.quiz__elem:hover {
+	background: #D9FAF1;
+
+}
+
 .quiz__elem.active {
 	background: #17CF97;
 
 }
 
-.quiz__progress_num, .quiz__progress_in {
+.quiz__progress_num,
+.quiz__progress_in {
 	font-weight: 400;
 	font-size: 14px;
 	line-height: 145.02%;
@@ -463,20 +562,25 @@ margin-bottom: 30px;
 	color: rgba(0, 0, 0, .3);
 
 }
+
 .quiz__progress {
 	margin-top: 70px;
 }
+
 .quiz__progress_step {
-	text-align: center;;
+	text-align: center;
+	;
 	margin-bottom: 10px;
 }
+
 .quiz__progress_line {
 	background: #EFEFEF;
 	border-radius: 10px;
 	height: 8px;
 	position: relative;
 }
-.quiz__progress_lineActive {;
+
+.quiz__progress_lineActive {
 	position: absolute;
 	background: #17CF97;
 	border-radius: 10px;
@@ -488,39 +592,47 @@ margin-bottom: 30px;
 .result__elems {
 	width: 384px;
 }
+
 .result__elems .card__elems {
 	margin-bottom: 57px;
 }
+
 .result__elems .card__elems:last-child {
 	margin-bottom: 0;
 }
+
 .card__items_text {
 	font-size: 14px;
-line-height: 145.02%;
-/* or 20px */
+	line-height: 145.02%;
+	/* or 20px */
 
 
-/* серый */
+	/* серый */
 
-color: #ABABAB;
+	color: #ABABAB;
 }
+
 .card__items_text__first {
 	margin-bottom: 7px;
 }
+
 .result__block_img {
 	width: 398px;
 	height: 397px;
 }
+
 .result__items {
 	width: 396px;
 	border: 1px solid #17CF97;
 	text-align: center;
 	padding: 19px 28px;
 }
+
 .result__items_title {
 	margin-bottom: 11px;
 	font-size: 24px;
 }
+
 .result__items_price {
 	font-weight: 300;
 	font-size: 24px;
@@ -532,10 +644,12 @@ color: #ABABAB;
 	margin-bottom: 30px;
 	color: #2D2D2D;
 }
+
 .result__items_btn {
 	width: 340px;
-height: 57px;
+	height: 57px;
 }
+
 .result__items_line {
 	width: 333px;
 	height: 0px;
@@ -545,7 +659,8 @@ height: 57px;
 	margin: 25px 0;
 	border: 1px solid #2D2D2D;
 }
-.result__items_intro  {
+
+.result__items_intro {
 	font-size: 14px;
 	line-height: 145.02%;
 	/* or 20px */
@@ -555,10 +670,12 @@ height: 57px;
 	margin-bottom: 17px;
 	color: #ABABAB;
 }
+
 .result__items_block__btn {
 	margin-bottom: 10px;
 	margin-top: 0;
 }
+
 .result__items_block__btn:last-child {
 	margin-bottom: 0;
 }
@@ -567,19 +684,23 @@ height: 57px;
 #order {
 	position: relative;
 }
+
 .order__block {
 	height: 775px;
 	display: flex;
 	justify-content: space-between;
 }
+
 .order_items {
 	width: 740px;
 	margin-top: 200px;
 	margin-right: 56px;
 }
+
 .order__form_block {
 	margin-bottom: 30px;
 }
+
 .order__form_input {
 	width: 240px;
 	height: 57px;
@@ -590,23 +711,26 @@ height: 57px;
 	padding-right: 15px;
 	border: none;
 	font-size: 16px;
-line-height: 103.52%;
-/* identical to box height, or 17px */
-/*	margin-right: 10px;*/
+	line-height: 103.52%;
+	/* identical to box height, or 17px */
+	/*	margin-right: 10px;*/
 	outline: none;
-color: rgba(0, 0, 0, .3);
+	color: rgba(0, 0, 0, .3);
 }
+
 /*.order__form_input:last-child {
 	margin-right: 0;
 }*/
 .order__form_btns {
 	flex-wrap: wrap;
 }
+
 .order__form_radioBlock {
 	margin-right: 10px;
 	margin-bottom: 10px;
 	min-height: 37px;
 }
+
 .radioLable {
 	padding: 10px 30px;
 	text-align: center;
@@ -618,16 +742,18 @@ color: rgba(0, 0, 0, .3);
 	border: 1px solid #17CF97;
 	border-radius: 100px;
 }
-input[type=radio]:checked + label {
+
+input[type=radio]:checked+label {
 	background: #17CF97;
 	color: #fff;
 }
+
 .order__form_radio {
 	display: none;
 }
 
 .order__form_line {
-/*	border: 1px solid #2D2D2D;*/
+	/*	border: 1px solid #2D2D2D;*/
 	background: #2D2D2D;
 	height: 2px;
 	border: none;
@@ -635,89 +761,101 @@ input[type=radio]:checked + label {
 	margin-bottom: 50px;
 	opacity: 0.1;
 }
+
 .order__form_pay {
 	width: 365px;
 	height: 57px;
 }
+
 .order__form_btn {
 	width: 365px;
 	height: 57px;
 	background: #D9FAF1;
 	color: #17CF97;
 }
+
 .order__form_btn:hover {
 	color: #fff;
 }
+
 .order__img {
-    position: absolute;
-    width: 511px;
-    right: 0;
-    top: 0;
-    height: 775px;
+	position: absolute;
+	width: 511px;
+	right: 0;
+	top: 0;
+	height: 775px;
 }
 
 #orderStep {
 	position: relative;
 }
+
 .orderStep .order__form_line {
 	margin-top: 20px;
 	margin-bottom: 36px;
 }
+
 .order__form_intro {
 	font-size: 14px;
-line-height: 145.02%;
-/* or 20px */
+	line-height: 145.02%;
+	/* or 20px */
 
 
-/* черный */
+	/* черный */
 
-color: #323232;
-margin-bottom: 5px;
+	color: #323232;
+	margin-bottom: 5px;
 }
 
 .orderStep_form .order__form_block {
 	display: flex;
 	justify-content: space-between;
 }
+
 .orderStep_form_input {
 	height: 50px;
 	width: 291px;
 	margin-bottom: 10px;
 }
+
 .order__form_item .orderStep_form_input {
 	width: 88px;
 	margin-right: 10px;
-	
+
 }
+
 .orderStep_form input[name="cardFname"] {
 	width: 220px;
 	margin-right: 15px;
 }
+
 .orderStep_form input[name="cardCvc"] {
 	width: 91px;
 }
 
-.orderStep .order_items {
-	
-}
+.orderStep .order_items {}
 
 /*consultation.html*/
 #singUpConsultation {
 	position: relative;
 }
+
 .singUpConsultation {
 	height: 775px;
 	display: flex;
 	justify-content: space-between;
 }
+
 .blockImgHiden {
 	width: 511px;
 	height: 775px;
 	visibility: hidden;
 }
+
 .singUpConsultation__form {
 	margin-top: 200px;
 }
+
 .singUpConsultation__img {
 	position: absolute;
 	width: 511px;
@@ -730,22 +868,25 @@ margin-bottom: 5px;
 	margin-top: 15px;
 	margin-bottom: 30px;
 }
+
 .singUpConsultation__form_btn {
 	width: 365px;
 	height: 57px;
 }
+
 .singUpConsultation__ckekbox {
 	margin-right: 5px;
 }
+
 .chekbox__intro {
 	font-size: 10px;
-line-height: 145.02%;
-/* identical to box height, or 15px */
+	line-height: 145.02%;
+	/* identical to box height, or 15px */
 
 
-/* черный */
+	/* черный */
 
-color: #2D2D2D;
+	color: #2D2D2D;
 
-opacity: 0.3;
+	opacity: 0.3;
 }
