--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -7,53 +7,19 @@
 		<div class="container p100">
 			<div class="catalog">
 				<div class="title">Все букеты</div>
-				<div class="catalog__block">
-					<div class="recommended__elems ficb recommended__elems_first">
-						<div class="recommended__block recommended__block_first">
-							<div class="recommended__block_elems ficb">
-								<span class="recommended__block_intro">Летнее утро</span>
-								<span class="recommended__block_price">3 600 руб</span>
-							</div>
-						</div>
-						<div class="recommended__block recommended__block_sec">
-							<div class="recommended__block_elems ficb">
-								<span class="recommended__block_intro">Пламенный закат</span>
-								<span class="recommended__block_price">3 600 руб</span>
-							</div>
-						</div>
-						<div class="recommended__block recommended__block_thr">
-							<div class="recommended__block_elems ficb">
-								<span class="recommended__block_intro">Осенний</span>
-								<span class="recommended__block_price">3 600 руб</span>
-							</div>
-						</div>
-						
+				<div class="catalog__block" id="cata">
 
-					</div>
-					<div class="recommended__elems ficb recommended__elems_sec">
-						<div class="recommended__block recommended__block_first">
-							<div class="recommended__block_elems ficb">
-								<span class="recommended__block_intro">Полевой</span>
-								<span class="recommended__block_price">1 600 руб</span>
+					{% for bouquet in bouquets %}
+							<div class="recommended__block_elems ficb recommended-bg" style="background-image: url('{{ bouquet.image.url }}');">
+								{% comment %} <img src="{{ bouquet.image.url }}" alt="{{ bouquet.title }}" class="recommended-img"> {% endcomment %}
+								<span class="recommended_intro">{{ bouquet.title }}</span>
+								<span class="recommended_price">{{ bouquet.price }} руб</span>
 							</div>
-						</div>
-						<div class="recommended__block recommended__block_sec">
-							<div class="recommended__block_elems ficb">
-								<span class="recommended__block_intro">Весенний</span>
-								<span class="recommended__block_price">3 200 руб</span>
-							</div>
-						</div>
-						<div class="recommended__block recommended__block_thr">
-							<div class="recommended__block_elems ficb">
-								<span class="recommended__block_intro">Нежный</span>
-								<span class="recommended__block_price">2 900 руб</span>
-							</div>
-						</div>
-						
-						
-					</div>
-					<button class="btn largeBtn catalog__btn">Показать ещё</button>
+					{% endfor %}
 				</div>
+				{% if 'all' not in request.GET %}
+					<button class="btn largeBtn catalog__btn" onclick="location.href='{% url 'catalog' %}?all#cata'">Показать ещё</button>
+				{% endif %}
 			</div>
 		</div>
 	</section>
