--- a/templates/card.html
+++ b/templates/card.html
@@ -12,8 +12,8 @@
 					<img src="{% static 'img/cardImg.jpg' %}" alt="img" class="card__img">
 				</div>
 				<div class="card__block card__block_sec">
-					<div class="title">Летнее утро</div>
-					<div class="card__block_price">3 600 руб</div>
+					<div class="title">{{ bouquet.title }}</div>
+					<div class="card__block_price">{{ bouquet.price }} руб</div>
 					<div class="card__elems ">
 						<span class="card__elems_intro">Состав</span>
 						<div class="card__items">
