--- a/templates/card.html
+++ b/templates/card.html
@@ -9,51 +9,41 @@
 		<div class="container">
 			<div class="card ficb">
 				<div class="card__block card__block_first">
-					<img src="{% static 'img/cardImg.jpg' %}" alt="img" class="card__img">
+					<img src="{{ bouquet.image.url }}" alt="img" class="card__img">
 				</div>
 				<div class="card__block card__block_sec">
 					<div class="title">{{ bouquet.title }}</div>
 					<div class="card__block_price">{{ bouquet.price }} руб</div>
+
+					<div class="card__elems ">
+						<span class="card__elems_intro">Описание</span>
+						<div class="card__items">
+							<span class="card_items_intro">
+								{{ bouquet.description }}
+							</span>
+						</div>
+					</div>
+
+
 					<div class="card__elems ">
 						<span class="card__elems_intro">Состав</span>
 						<div class="card__items">
 							<span class="card_items_intro">
-								Гортензия розовая - 1 шт.
-							</span>
-							<span class="card_items_intro">
-								Ветки эквалипта - 5 шт.
-							</span>
-							<span class="card_items_intro">
-								Гипсофила - 1 шт.
-							</span>
-							<span class="card_items_intro">
-								Матовая упаковка - 1 шт.
-							</span>
-							<span class="card_items_intro">
-								Лента атласная - 1 шт.
-							</span>
-							<span class="card_items_intro">
-								Рекомендация по уходу - 1 шт.
-							</span>
-							<span class="card_items_intro">
-								Открыточка с вашими пожеланиями - 1 шт.
-							</span>
-							<span class="card_items_intro">
-								Любовь флориста (бесплатно) - 1 шт.
+								{{ bouquet.composition }}
 							</span>
 						</div>
 					</div>
 					<div class="card__elems ">
+						{% if bouquet.size %}
 						<span class="card__elems_intro">Размер</span>
+
 						<div class="card__items">
 							<span class="card_items_intro">
-								Высота - 50 см
-							</span>
-							<span class="card_items_intro">
-								Ширина - 30 см
+									{{ bouquet.size }}
 							</span>
 						</div>
 					</div>
+						{% endif %}
 					<button class="btn largeBtn card__btn">Заказать букет</button>
 				</div>
 			</div>
