--- a/templates/card.html
+++ b/templates/card.html
@@ -13,7 +13,7 @@
 				</div>
 				<div class="card__block card__block_sec">
 					<div class="title">{{ bouquet.title }}</div>
-					<div class="card__block_price">{{ bouquet.price }} руб</div>
+					<div class="card__block_price">{{ bouquet.formatted_price }} руб</div>
 
 					<div class="card__elems ">
 						<span class="card__elems_intro">Описание</span>
