--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -15,7 +15,7 @@
 									onclick="window.location.href='{% url 'card' bouquet.id %}'"
 								>
 									<span class="recommended_intro">{{ bouquet.title }}</span>
-									<span class="recommended_price">{{ bouquet.price }} руб</span>
+									<span class="recommended_price">{{ bouquet.formatted_price }} руб</span>
 								</div>
 					{% endfor %}
 
