--- a/static/css/main.css
+++ b/static/css/main.css
@@ -232,6 +232,10 @@ height: 825px;*/
 	box-sizing: border-box;
 }
 
+.recommended__block_elems:hover {
+	cursor: pointer;
+}
+
 .recommended__btn {
 	width: 100%;
 	height: 57px;
