--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -14,12 +14,12 @@
             </div>
             <div class="quiz__block">
                 <h1 class="quiz__title">К какому событию нужен букет?</h1>
-                <form method="post">
-                    {% csrf_token %}
                     <div class="quiz__elems fic">
+
                         {% for event in events %}
-                            <button type="submit" name="event" value="{{ event.title }}" class="quiz__elem">{{ event.title }}</button>
+                        <a href="?event={{ event.title }}" class="quiz__elem">{{ event.title }}</a>
                         {% endfor %}
+
                     </div>
                     <div class="quiz__progress">
                         <div class="quiz__progress_step">
@@ -31,7 +31,6 @@
                             <div class="quiz__progress_lineActive"></div>
                         </div>
                     </div>
-                </form>
             </div>
         </div>
     </div>
