--- a/templates/consultation.html
+++ b/templates/consultation.html
@@ -3,22 +3,41 @@
 
 {% block title %}Консультация - Flower Shop{% endblock %}
 {% block content %}
-	<section id="singUpConsultation">
-		<div class="container">
-			<div class="singUpConsultation">
-				<form action="#" class="singUpConsultation__form">
-					<div class="title">Запись на консультацию</div>		
-					<input type="text" name="fname" class="order__form_input" placeholder="Введите Имя" required>
-					<input type="text" name="tel" class="order__form_input" placeholder="+ 7 (999) 000 00 00" required>
-					<div class="chekbox fic">
-						<input type="checkbox" class="singUpConsultation__ckekbox" checked required>
-						<span class="chekbox__intro">Я согласен(а) с политикой конфидециоальности</span>
-					</div>
-					<button class="btn singUpConsultation__form_btn">Отправить</button>	
-				</form>
-				<div class="blockImgHiden"></div>
-			</div>
-		</div>
-		<img src="{% static 'img/singUpConsultationImg.jpg' %}" alt="singUpConsultationImg" class="singUpConsultation__img">
-	</section>
+    <section id="singUpConsultation">
+        <div class="container">
+            <div class="singUpConsultation">
+                <form action="{% url 'consultation' %}" method="post">
+                    {% csrf_token %}
+                    <div class="title">Запись на консультацию</div>
+
+                    {% if form.errors %}
+                        <div class="form-errors">
+                            {% for field in form %}
+                                {% for error in field.errors %}
+                                    <p class="error">{{ error }}</p>
+                                {% endfor %}
+                            {% endfor %}
+                            {% for error in form.non_field_errors %}
+                                <p class="error">{{ error }}</p>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+
+
+                    <input type="text" name="client_name" class="order__form_input" placeholder="Введите Имя" required>
+
+                    <input type="tel" name="phone_number" class="order__form_input" placeholder="+7 (999) 000 00 00" required >
+
+                    <div class="chekbox fic">
+                        <input type="checkbox" name="agree" class="singUpConsultation__ckekbox" required>
+                        <span class="chekbox__intro">Я согласен(а) с политикой конфиденциальности</span>
+                    </div>
+
+                    <button type="submit" class="btn singUpConsultation__form_btn">Отправить</button>
+                </form>
+                <div class="blockImgHiden"></div>
+            </div>
+        </div>
+        <img src="{% static 'img/singUpConsultationImg.jpg' %}" alt="singUpConsultationImg" class="singUpConsultation__img">
+    </section>
 {% endblock %}
