--- a/templates/order.html
+++ b/templates/order.html
@@ -15,6 +15,7 @@
 								<input type="text" name="fname" class="order__form_input" placeholder="Введите Имя" required>
 								<input type="text" name="tel" class="order__form_input" placeholder="+7 (999) 000 00 00" required>
 								<input type="text" name="adres" class="order__form_input" placeholder="Адрес доставки" required>
+								<input type="hidden" name="bouquet_id" value="{{ bouquet_id }}">
 							</div>
 							<div class="order__form_btns fic">
 								<div class="order__form_radioBlock ">
