--- a/templates/result.html
+++ b/templates/result.html
@@ -34,7 +34,7 @@
 					<div class="result__items">
 						<div class="title result__items_title"> {{ bouquet.title }}</div>
 						<div class="result__items_price">{{ bouquet.formatted_price }} руб</div>
-						<button class="btn result__items_btn" onclick="location.href='{% url 'order' %}'">Заказать букет</button>
+						<a href="{% url 'order' %}?bouquet={{ bouquet.id }}" class="btn result__items_btn">Заказать букет</a>
 						<hr class="result__items_line" />
 						<div class="result__items_intro">Хотите что-то более специальное?</div>
 						<div class="result__items_block">
