--- a/templates/index.html
+++ b/templates/index.html
@@ -20,25 +20,20 @@
 		<div class="container">
 			<div class="recommended p100">
 				<div class="title">Рекомендуем</div>
-				<div class="recommended__elems ficb">
-					<div class="recommended__block recommended__block_first">
-						<div class="recommended__block_elems ficb">
-							<span class="recommended__block_intro">Летнее утро</span>
-							<span class="recommended__block_price">3 600 руб</span>
-						</div>
-					</div>
-					<div class="recommended__block recommended__block_sec">
-						<div class="recommended__block_elems ficb">
-							<span class="recommended__block_intro">Зимняя сказка</span>
-							<span class="recommended__block_price">4 100 руб</span>
-						</div>
-					</div>
-					<div class="recommended__block recommended__block_thr">
-						<div class="recommended__block_elems ficb">
-							<span class="recommended__block_intro">Нежный</span>
-							<span class="recommended__block_price">2 900 руб</span>
-						</div>
-					</div>
+
+				<div class="catalog__block" id="cata">
+					{% for bouquet in bouquets %}
+								<div class="recommended__block_elems ficb recommended-bg" 
+									style="background-image: url('{{ bouquet.image.url }}');" 
+									onclick="window.location.href='{% url 'card' bouquet.id %}'"
+								>
+									<span class="recommended_intro">{{ bouquet.title }}</span>
+									<span class="recommended_price">{{ bouquet.formatted_price }} руб</span>
+								</div>
+					{% endfor %}
+
+				</div>
+
 				</div>
 				<button class="btn recommended__btn" onclick="location.href='{% url 'catalog' %}'">Показать всю коллекцию</button>
 			</div>
